# img2ico

./: README.md  pyproject.toml
img2ico/: __init__.py  __main__.py  gui.py  img2ico.py
